--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -9,6 +9,12 @@ footer {
     // @include breakpoint(ipad-max) {
     //  object-fit: cover;
     //  background-position: left right;
+    @include breakpoint(ipad-max){
+        margin-top: 100px;
+    }
+    @include breakpoint(mobile-max){
+        margin-top: 100px;
+    }
     // }
 
     &::before {
