--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -339,9 +339,11 @@
         @include breakpoint(mobile-max) {
             text-align: center;
             max-width: 100%;
+            margin-top: 4rem;
+
 
         }
-
+       
         .superintendent-heading {
             font-size: 4.5rem;
             color: $heading-color;
