--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -649,7 +649,7 @@
                 }
 
                 @include breakpoint(ipad-max) {
-                    padding-top: unset;
+                    padding-top: 2rem;
                     padding-left: unset;
 
                 }
