--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -219,7 +219,7 @@ header {
 
                   a {
                     float: none;
-                    color: black;
+                    color: #000000;
                     padding: 12px 16px;
                     text-decoration: none;
                     display: block;
@@ -227,7 +227,7 @@ header {
 
                     &:hover {
                       background-color: $white-color;
-                      color: black;
+                      color: #000000;
                     }
                   }
                 }
