--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -87,7 +87,8 @@ header {
               }
 
               a {
-                $primary-font-family: 'Circular-Std-Book';
+                // $primary-font-family: 'Circular-Std-Book';
+                font-family: $primary-font-family ;
                 color: $header-icon-color;
                 font-size: 1.8rem;
 
@@ -118,7 +119,7 @@ header {
             :hover{
               background-color: $bg-primary-color;
               color: $white-color ;
-               border: 0.1rem solid #fff;
+               border: 0.1rem solid $white-color;
 
             }
 
@@ -354,7 +355,7 @@ header {
             color: $nav-link-color;
             font-family: $tertiary-font-family;
             &:hover{
-              color:#841E25 ;
+              color:$bg-primary-color;
             }
 
             @include breakpoint(medium-large-desktop-max) {
@@ -409,7 +410,7 @@ header {
               }
             }
             &:hover{
-              color:#841E25 ;
+              color:$bg-primary-color ;
             }
 
             @include breakpoint(medium-large-desktop-max) {
@@ -434,7 +435,7 @@ header {
 
             a {
               float: none;
-              color:#841E25 ;
+              color: #002147;
               padding: 12px 16px;
               text-decoration: none;
               display: block;
@@ -443,7 +444,7 @@ header {
 
               &:hover {
                 background-color: #ddd;
-                color: black;
+                color:$bg-primary-color ;
               }
             }
           }
@@ -466,7 +467,7 @@ header {
 
 
       span {
-        background:#841E25 ;
+        background:$bg-primary-color ;
         width: 100%;
         height: 0.4rem;
         margin: 0.4rem 0;
@@ -482,7 +483,7 @@ header {
         // color: #F2E162;
 
         &:first-child {
-          color: black;
+          color: #000000;
           transform: rotate(-45deg) translate(-0.6rem, 0.6rem);
           -webkit-transform: rotate(-45deg) translate(-0.6rem, 0.6rem);
           -moz-transform: rotate(-45deg) translate(-0.6rem, 0.6rem);
@@ -495,7 +496,7 @@ header {
         }
 
         &:last-child {
-          color: black;
+          color: #000000;
           transform: rotate(45deg) translate(-0.5rem, -0.5rem);
           -webkit-transform: rotate(45deg) translate(-0.5rem, -0.5rem);
           -moz-transform: rotate(45deg) translate(-0.5rem, -0.5rem);
@@ -525,7 +526,7 @@ header {
   -moz-border-radius: 2.2rem;
   -ms-border-radius: 2.2rem;
   -o-border-radius: 2.2rem;
-  box-shadow: 0 0 0.1rem 0.1rem  #FFFFFF;
+  box-shadow: 0 0 0.1rem 0.1rem  $white-color;
   outline: none;
   color: #42be11;
   transition:all 0.5s ease-in ;
