change  link color

--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -12,7 +12,7 @@ header {
       .top-header-row {
         display: flex;
         justify-content: space-between;
-        padding: 0 15px;
+        // padding: 0 15px;
 
 
 
